--- a/apiClient/index.html
+++ b/apiClient/index.html
@@ -37,7 +37,7 @@
                             ¿No tienes cuenta? <a href='./registrarse.html'>Sign Up</a>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <a href="#">Olvidé mi contraseña :(</a>
+                            <a href="./recuperar_pass.html">Olvidé mi contraseña :(</a>
                         </div>
                     </div>
                 </div>
