--- a/apiClient/perfil.html
+++ b/apiClient/perfil.html
@@ -41,8 +41,8 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-orange"></i>
-                                                <strong class="margin-10px-left text-orange">Nombre:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left">Nombre:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="nombre"></p>
@@ -52,8 +52,8 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-yellow"></i>
-                                                <strong class="margin-10px-left text-yellow">Apellidos:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left">Apellidos:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="apellidos"></p>
@@ -63,8 +63,8 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-lightred"></i>
-                                                <strong class="margin-10px-left text-lightred">Correo:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left">Correo:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="corroe"></p>
@@ -74,8 +74,8 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-green"></i>
-                                                <strong class="margin-10px-left text-green">Pregunta de seguridad:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left">Pregunta de seguridad:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="pregunta"></p>
@@ -85,8 +85,8 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-purple"></i>
-                                                <strong class="margin-10px-left xs-margin-four-left text-purple">Respuesta:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left xs-margin-four-left">Respuesta:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="respuesta"></p>
@@ -96,13 +96,16 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-5 col-5">
-                                                <i class="text-pink"></i>
-                                                <strong class="margin-10px-left xs-margin-four-left text-pink">Email:</strong>
+                                                <i class=""></i>
+                                                <strong class="margin-10px-left xs-margin-four-left">Email:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
                                                 <p id="correo"><a href="javascript:void(0)"></a></p>
                                             </div>
                                         </div>
+                                    </li>
+                                    <li>
+                                        <button type="button" class="btn btn-warning" onclick="window.location.href='./cambiarPass.html'">Cambiar contraseña</button>
                                     </li>
                                 </ul>
                             </div>    
