--- a/apiClient/cambiarPass.html
+++ b/apiClient/cambiarPass.html
@@ -31,7 +31,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Contraseña nueva" name="passwordNueva1">
+                            <input type="password" class="form-control" placeholder="Repite contraseña nueva" name="passwordNueva2">
                         </div>
 
                         <div class="form-group">
