--- a/apiClient/cambiarPass.html
+++ b/apiClient/cambiarPass.html
@@ -24,18 +24,18 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Contraseña nueva" name="passwordNueva1">
+                            <input type="password" class="form-control" placeholder="Nueva contraseña" name="passwordNueva1">
                         </div>
 
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Repite contraseña nueva" name="passwordNueva2">
+                            <input type="password" class="form-control" placeholder="Repite la nueva contraseña" name="passwordNueva2">
                         </div>
 
                         <div class="form-group">
-                            <input type="button" class="btn btn-outline-dark float-right login_btn" onclick="cambiarPass()" value="Cambiar pass"/>
+                            <input type="button" class="btn btn-outline-dark float-right login_btn" onclick="cambiarPass()" value="Cambiar contraseña"/>
                         </div>
                     </div>
                 </div>
