--- a/apiClient/perfil.html
+++ b/apiClient/perfil.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <title>Perfil</title>
     </head>
-    <body>
+    <body onload="getPerfil()">
         <nav class="navbar navbar-expand-sm">
             <ul class="nav nav-pills nav-fill">
                 <div class="input-group">
@@ -29,7 +29,6 @@
                 </div>
             </ul>
         </nav>
-
         <div class="container">
             <div class="team-single">
                 <div class="row">
@@ -67,7 +66,7 @@
                                                 <strong class="margin-10px-left">Correo:</strong>
                                             </div>
                                             <div class="col-md-7 col-7">
-                                                <p id="corroe"></p>
+                                                <p id="correo"></p>
                                             </div>
                                         </div>
                                     </li>
@@ -114,7 +113,6 @@
                 </div>
             </div>
         </div>
-        
         <script type="text/javascript" src="lib/axios/dist/axios.standalone.js"></script>
         <script type="text/javascript" src="lib/CryptoJS/rollups/hmac-sha256.js"></script>
         <script type="text/javascript" src="lib/CryptoJS/rollups/sha256.js"></script>
@@ -130,6 +128,5 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        
     </body>
 </html>
