--- a/apiClient/perfil.html
+++ b/apiClient/perfil.html
@@ -17,6 +17,9 @@
                         <a class="nav-link" href="./videos_privados.html">Mis videos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="./subir_video.html">Subir vídeo</a>
+                    </li>
+                    <li class="nav-item">
                         <form class="form-inline" onsubmit="">
                             <div class="md-form my-0">
                                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" >
