--- a/apiClient/perfil.html
+++ b/apiClient/perfil.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <title>Perfil</title>
     </head>
-    <body onload="getPerfil()">
+    <body>
         <nav class="navbar navbar-expand-sm">
             <ul class="nav nav-pills nav-fill">
                 <div class="input-group">
@@ -127,7 +127,10 @@
         <script type="text/javascript" src="lib/apiGatewayCore/simpleHttpClient.js"></script>
         <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
         <script type="text/javascript" src="apigClient.js"></script>
-        <script type="text/javascript" src="func.js"></script>
+        <script type="text/javascript" src="cli.js"></script>
+        <script type="text/javascript" src="cookies.js"></script>
+        <script type="text/javascript" src="perfil.js"></script>
+        <script type="text/javascript" src="navfunc.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
