--- a/apiClient/index.html
+++ b/apiClient/index.html
@@ -17,14 +17,14 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Usuario" name="username">
+                            <input type="text" class="form-control" placeholder="Usuario" name="username" required>
                         </div>
 
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                            <input type="password" class="form-control" placeholder="Contraseña" name="password" required>
                         </div>
 
                         <div class="form-group">
