--- a/apiClient/registrarse.html
+++ b/apiClient/registrarse.html
@@ -14,26 +14,26 @@
                     </div>
                     <div class="card-body">
                         <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Nombre" name="nombre">
+                            <input type="text" class="form-control" placeholder="Nombre" name="nombre" required>
                         </div>
 
                         <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Apellidos" name="apellidos">
+                            <input type="text" class="form-control" placeholder="Apellidos" name="apellidos" required>
                         </div>
 
                         <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Usuario" name="username">
+                            <input type="text" class="form-control" placeholder="Usuario" name="username" required>
                         </div>
 
                         <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Correo" name="correo">
+                            <input type="text" class="form-control" placeholder="Correo" name="correo" required>
                         </div>
 
                         <div class="input-group form-group">
-                            <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                            <input type="password" class="form-control" placeholder="Contraseña" name="password" required>
                         </div>
                         
-                        <select class="mdb-select md-form" multiple id="mySelect">
+                        <select class="mdb-select md-form" id="mySelect" required>
                             <option value="" disabled selected>Elige tu pregunta secreta</option>
                             <option value="¿Color favorito?">¿Color favorito?</option>
                             <option value="¿Nombre de tu mascota?">¿Nombre de tu mascota?</option>
@@ -41,7 +41,7 @@
                           </select>
                           
                         <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Respuesta correcta" name="respuesta">
+                            <input type="text" class="form-control" placeholder="Respuesta correcta" name="respuesta" required>
                         </div>
 
                         <div class="form-group">
