--- a/apiClient/cambiarPass.html
+++ b/apiClient/cambiarPass.html
@@ -17,21 +17,21 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Contraseña actual" name="passwordActual" required>
+                            <input type="password" class="form-control" placeholder="Contraseña actual" id="passwordActual" required>
                         </div>
 
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Nueva contraseña" name="passwordNueva1" required>
+                            <input type="password" class="form-control" placeholder="Nueva contraseña" id="passwordNueva1" required>
                         </div>
 
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
-                            <input type="password" class="form-control" placeholder="Repite la nueva contraseña" name="passwordNueva2" required>
+                            <input type="password" class="form-control" placeholder="Repite la nueva contraseña" id="passwordNueva2" required>
                         </div>
 
                         <div class="form-group">
