--- a/apiClient/ver_video.html
+++ b/apiClient/ver_video.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <title>Perfil</title>
+        <title></title>
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
@@ -47,17 +47,37 @@
             <div class="page-content inset">
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="well lead">Perfil de usuario</p>
                             <div class="container">
-                                <div>
-                                    <img src="https://phantom-elmundo.unidadeditorial.es/942bdc14136d5375429aa896cb8bc390/crop/130x0/1208x719/resize/746/f/jpg/assets/multimedia/imagenes/2020/03/24/15850661113045.jpg" alt="John" style="width:50%" style="height: 50%;">
+                                <video id="video" preload="auto" controls="" loop="loop" src=""></video>
+                                <br/>
+                                <i class="fas fa-thumbs-up" id="voteup" onclick="votar(1)">0</i>
+                                <i class="fas fa-thumbs-down" id="votedown" onclick="votar(0)">0</i>
+                                <br/>
+                                <div class="form-group">
+                                    <label for="comment">Comenta</label>
+                                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                                </div> 
+                                <button class="btn" onclick="postComentario()"><i class="fa fa-share"></i> Share</button>
+                                <br/>
+                                <div class="container" id="zonaComentariosPadre">
+                                    <div class="row" id="zonaComentarios">
+
+
+                                        <div class="media comment-box">
+                                            <div class="media-left">
+                                                <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png" width="30%">
+                                            </div>
+                                            <div class="media-body">
+                                                <h4 class="media-heading" id="usuario"></h4>
+                                                <p id="comentario"></p>
+                                            </div>
+                                        </div>
+
+
+
+                                    </div>
                                 </div>
-                                Usuario: <p id="usuario"></p>
-                                Nombre: <p id="nombre"></p>
-                                Apellidos: <p id="apellidos"></p>
-                                Correo: <p id="correo"></p>
-                                Pregunta de seguridad:<p id="pregunta"></p>
-                                Respuesta: <p id="respuesta"></p>
+
                             </div>
                         </div>
                     </div>
@@ -81,7 +101,7 @@
         <script type="text/javascript" src="apigClient.js"></script>
         <script type="text/javascript" src="cli.js"></script>
         <script type="text/javascript" src="cookies.js"></script>
-        <script type="text/javascript" src="perfil.js"></script>
+        <script type="text/javascript" src="ver_video.js"></script>
         <script type="text/javascript" src="navfunc.js"></script>
     </body>
 </html>
